fix tests and problem with import command