@@ -194,7 +194,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
-                        <argLine>-Xmx190m -Xms190m -Duser.language=en</argLine>
+                        <argLine>-Xmx190m -Xms190m -Duser.language=en --enable-preview</argLine>
                     </configuration>
                 </plugin>
 
